--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -8,13 +8,26 @@ a {
     text-decoration: none;
 }
 
+h2 {
+    text-align: center;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
+.date {
+    margin-top: 30px;
+}
+
+.error {
+    color: red;
+}
+
 .screen {
     display: none;
+    margin-top: 50px;
     &_active {
         display: block;
     }
