--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -19,6 +19,16 @@ h2 {
 
 .date {
     margin-top: 30px;
+    &__input {
+        height: 25px;
+        width: 120px;
+        border-radius: 15px;
+        background-color: #fff;
+        padding: 5px;
+        border-color: var(--menu-bg-color);
+        outline: none;
+        margin: 0 5px;
+    }
 }
 
 .error {
