update interface design

--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -16,5 +16,11 @@
     &__show-rates {
         margin-top: 20px;
     }
+    &__convert {
+       margin-left: 150px;
+    }
+    &__share {
+        margin: 100px 0;
+    }
 }
 
