--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,7 +9,7 @@ a {
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
 }
 
 .container {
@@ -42,4 +42,6 @@ h2 {
         display: block;
     }
 }
+
+
 
