--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,15 @@ h2 {
     text-align: left;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+}
+
+.browser-info {
+    margin-left: 50px;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
